# benchmark

./: Read.md  Readme.md  docker-compose-dev.yml  docker-compose.yml
back/golang/: Dockerfile  startup.sh
back/golang/src/fibonacci/: fibonacci.go  fibonacci.sh
back/golang/src/io/: io.sh
back/php/: Dockerfile  php.ini
back/php/php/: io.sh
back/php/src/php/: fibonacci.sh  index.php  leibniz_formula.php  leibniz_formula.sh
back/rust/: Dockerfile  startup.sh  test_in.csv
back/rust/fibonacci/: fibonacci.sh
back/rust/io/src/: main.rs
back/rust/rust_server/: .gitignore
back/rust/src/leibniz_formula/: leibniz_formula.sh
back/rust/src/rust_server/: Cargo.toml
back/rust/src/rust_server/src/: main.rs
env/back/golang/: Dockerfile  fibonacci  fibonacci.sh  io.sh  leibniz_formula  leibniz_formula.sh
env/back/php/: Dockerfile
env/back/rust/: Dockerfile  fibonacci.sh  io.sh  leibniz_formula.sh  startup.sh
env/front/react/: Dockerfile  entrypoint.sh
front/: Dockerfile
front/nginx_conf/prod/: nginx.prod.conf
front/react/react-app/src/: App.css
front/react/src/react-app/: package-lock.json
proxy/nginx/: my.conf
src/back/golang/fibonacci/: fibonacci.go
src/back/golang/golang_server/: golang_server.go
src/back/golang/io/: io.go
src/back/golang/leibniz_formula/: leibniz_formula.go  leibniz_formula.sh
src/back/php/: leibniz_formula.php  leibniz_formula.sh
src/back/php/php/: fibonacci.php  index.php  io.php  leibniz_formula.php  leibniz_formula.sh
src/back/rust/io/: .gitignore  Cargo.toml  io.sh
src/proxy/nginx/: my.conf
(+9 files in other folders)
