[package]
name = "rust_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
axum = "0.6.11"
serde = { version = "^1.0.157", features = ["derive"] }
